Fix logo display on mobile devices

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -23,7 +23,9 @@
 body > header h1 {
   text-indent: -1000px !important;
   background: url("/images/logo.png") no-repeat 0 8px;
-  width: 336px;
+  background-size: 100%;
+  width: 30%;
+  min-width: 200px;
 }
 
 body > header h2 {
